# Folly-iOS-Arm64-Experiments

./: README.md
FollyPhoneTest/FollyPhoneTest/: AppDelegate.h  AppDelegate.m  FollyExecutor.h  FollyExecutor.mm  ViewController.h  ViewController.m  main.m
FollyPhoneTest/FollyPhoneTest.xcodeproj/: project.pbxproj
FollyPhoneTest/FollyPhoneTest.xcodeproj/project.xcworkspace/xcuserdata/wsbuild.xcuserdatad/: UserInterfaceState.xcuserstate
FollyPhoneTest/FollyPhoneTest.xcodeproj/xcuserdata/wsbuild.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FollyPhoneTest/FollyPhoneTest.xcodeproj/xcuserdata/wsbuild.xcuserdatad/xcschemes/: xcschememanagement.plist
FollyPhoneTest/FollyPhoneTest/double-conversion.xcframework/: Info.plist
FollyPhoneTest/FollyPhoneTest/fmt.xcframework/: Info.plist
FollyPhoneTest/FollyPhoneTest/fmt.xcframework/Headers/fmt/: os.h
FollyPhoneTest/FollyPhoneTest/gflags.xcframework/: Info.plist
FollyPhoneTest/FollyPhoneTest/glog.xcframework/: Info.plist
FollyPhoneTest/FollyPhoneTest/libevent.xcframework/: Info.plist
FollyPhoneTest/FollyPhoneTest/libevent.xcframework/Headers/event2/: event-config.h
FollyPhoneTest/FollyPhoneTestTests/: FollyPhoneTestTests.m
FollyPhoneTest/FollyPhoneTestUITests/: FollyPhoneTestUITests.m
MacOSToiOS/MacOSToiOS/: Parser.swift  Transmogrifier.swift  main.swift
MacOSToiOS/MacOSToiOS.xcodeproj/: project.pbxproj
MacOSToiOS/MacOSToiOS.xcodeproj/project.xcworkspace/xcuserdata/wsbuild.xcuserdatad/: UserInterfaceState.xcuserstate
MacOSToiOS/MacOSToiOS.xcodeproj/xcuserdata/wsbuild.xcuserdatad/xcschemes/: xcschememanagement.plist
folly/: CMakeLists.txt  Makefile  cmake_install.cmake  ios.toolchain.cmake  libfolly.pc
folly/CMake/: FindDoubleConversion.cmake  FindFmt.cmake  FindOpenSSL.cmake  FollyCompilerUnix.cmake  FollyConfigChecks.cmake  folly-config.h.cmake  folly-deps.cmake
folly/CMakeScripts/: ReRunCMake.make
folly/folly/: Makefile  cmake_install.cmake  folly-config.h
folly/folly/experimental/: EnvUtil.cpp
folly/folly/experimental/exception_tracer/: Makefile  cmake_install.cmake
folly/folly/folly.xcodeproj/: project.pbxproj
folly/folly/folly.xcodeproj/xcuserdata/wsbuild.xcuserdatad/xcschemes/: xcschememanagement.plist
folly/folly/logging/example/: Makefile  cmake_install.cmake
folly/folly/portability/: GFlags.h  Malloc.h
